5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1671_1100.log
== TEST (2019-04-24 15:44:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = input("Digite o valor da cédula: ")


-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:44:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("Digite o valor da cédula: "))


-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:44:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula=int(input("Digite o valor da cédula: "))


-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:44:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula=int(input("Digite o valor da cedula: "))


-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 10:41:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vdc = int(input("Digite o valor da celula: "))

2 == Tartaruga
5 == Garça
10 == Arara
20 == Mico-leao-dourado
50 == Onça-pintada
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    2 == Tartaruga
NameError: name 'Tartaruga' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 10:42:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vdc = int(input("Digite o valor da celula: "))

2 = Tartaruga
5 = Garça
10 = Arara
20 = Mico-leao-dourado
50 = Onça-pintada
-- ERROR:
File "XXXX", line 6
    2 = Tartaruga
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 10:43:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vdc = int(input("Digite o valor da celula: "))

(2 = Tartaruga)
(5 = Garça)
(10 = Arara)
(20 = Mico-leao-dourado)
(50 = Onça-pintada)
-- ERROR:
File "XXXX", line 6
    (2 = Tartaruga)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 10:50:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vdc = int(input("Digite o valor da celula: "))

2 = "Tartaruga"
5 = "Garça"
10 = "Arara"
20 = "Mico-leao-dourado"
50 = "Onça-pintada"
-- ERROR:
File "XXXX", line 6
    2 = "Tartaruga"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 10:51:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vdc = int(input("Digite o valor da celula: "))

vdc == "Tartaruga"
vdc == "Garça"
vdc == "Arara"
vdc == "Mico-leao-dourado"
vdc == "Onça-pintada"
-- ERROR:
File "XXXX", line 6
    2 = "Tartaruga"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 10:57:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vc = int(input("Digite o valor da celula: "))

vc1 == "Tartaruga"
vc2 == "Garça"
vc3 == "Arara"
vc4 == "Mico-leao-dourado"
vc5 == "Onça-pintada"

if (vc = 2):
	print (vc1)
-- ERROR:
File "XXXX", line 12
    if (vc = 2):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 10:57:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vc = int(input("Digite o valor da celula: "))

vc1 == "Tartaruga"
vc2 == "Garça"
vc3 == "Arara"
vc4 == "Mico-leao-dourado"
vc5 == "Onça-pintada"

if (vc == 2):
	print (vc1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vc1 == "Tartaruga"
NameError: name 'vc1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 10:58:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
vc = int(input("Digite o valor da celula: "))

vc == "Tartaruga"
vc == "Garça"
vc == "Arara"
vc == "Mico-leao-dourado"
vc == "Onça-pintada"

if (vc == 2):
	print (vc1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vc1 == "Tartaruga"
NameError: name 'vc1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 10:59:09) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

vc == "Tartaruga"
vc == "Garça"
vc == "Arara"
vc == "Mico-leao-dourado"
vc == "Onça-pintada"

if (vc == 2):
	print (vc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vc1 == "Tartaruga"
NameError: name 'vc1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:00:32) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

2 == "Tartaruga"
5 == "Garça"
10 == "Arara"
20 == "Mico-leao-dourado"
50 == "Onça-pintada"
100 == "Garoupa"

if (vc == 2):
	print (vc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vc1 == "Tartaruga"
NameError: name 'vc1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:00:56) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

2 = "Tartaruga"
5 = "Garça"
10 = "Arara"
20 = "Mico-leao-dourado"
50 = "Onça-pintada"
100 = "Garoupa"

if (vc == 2):
	print (vc)
-- ERROR:
File "XXXX", line 4
    2 = "Tartaruga"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:01:33) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

2 == "Tartaruga"
5 == "Garça"
10 == "Arara"
20 == "Mico-leao-dourado"
50 == "Onça-pintada"
100 == "Garoupa"

if (vc == 2):
	print (vc)
-- ERROR:
File "XXXX", line 4
    2 = "Tartaruga"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:06:38) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

2 == "Tartaruga"
5 == "Garça"
10 == "Arara"
20 == "Mico-leao-dourado"
50 == "Onça-pintada"
100 == "Garoupa"

if ((vc <= 1) or (>=3)):
	print (2)
-- ERROR:
File "XXXX", line 11
    if ((vc <= 1) or (>=3)):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:08:30) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

#2 == "Tartaruga"
#5 == "Garça"
#10 == "Arara"
#20 == "Mico-leao-dourado"
#50 == "Onça-pintada"
#100 == "Garoupa"

if ((vc <= 1) or (>=3)):
	print ("Tartaruga")

-- ERROR:
File "XXXX", line 11
    if ((vc <= 1) or (>=3)):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:08:51) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

#2 == "Tartaruga"
#5 == "Garça"
#10 == "Arara"
#20 == "Mico-leao-dourado"
#50 == "Onça-pintada"
#100 == "Garoupa"

if ((vc <= 1) or (vc >= 3)):
	print ("Tartaruga")

-- OUTPUT:
Tartaruga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:09:13) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

#2 == "Tartaruga"
#5 == "Garça"
#10 == "Arara"
#20 == "Mico-leao-dourado"
#50 == "Onça-pintada"
#100 == "Garoupa"

if ((vc <= 1) or (vc >= 3)):
	print( "Tartaruga" )

-- OUTPUT:
Tartaruga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:10:03) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

#2 == "Tartaruga"
#5 == "Garça"
#10 == "Arara"
#20 == "Mico-leao-dourado"
#50 == "Onça-pintada"
#100 == "Garoupa"

if ((vc <= 1) or (vc >= 3)):
	print( "Tartaruga" )
else:
	print( "animal desconhecido")
-- OUTPUT:
Tartaruga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:11:05) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

#2 == "Tartaruga"
#5 == "Garça"
#10 == "Arara"
#20 == "Mico-leao-dourado"
#50 == "Onça-pintada"
#100 == "Garoupa"

if ((vc <= 1) or (vc >= 3)):
	print( "animal desconhecido" )
else:
	print( "tartaruga")
-- OUTPUT:
animal desconhecido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:43:46) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

#2 == "Tartaruga"
#5 == "Garça"
#10 == "Arara"
#20 == "Mico-leao-dourado"
#50 == "Onça-pintada"
#100 == "Garoupa"

if(vc == 2):
	print( "Tartaruga" )
elif(vc == 5):
	print(vc, "Garça")
elif(vc == 10):
	print (vc, "Arara")
elif(vc == 20):
	print(vc, "Mico-leao-dourado")
elif(vc == 50):	
	print("Onça-pintada")
elif(vc == 100):
	print(vc, "Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
100 Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:44:11) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

#2 == "Tartaruga"
#5 == "Garça"
#10 == "Arara"
#20 == "Mico-leao-dourado"
#50 == "Onça-pintada"
#100 == "Garoupa"

if(vc == 2):
	print( "Tartaruga" )
elif(vc == 5):
	print(vc, "Garça")
elif(vc == 10):
	print (vc, "Arara")
elif(vc == 20):
	print(vc, "Mico-leao-dourado")
elif(vc == 50):	
	print("Onça-pintada")
elif(vc == 100):
	print(vc, "Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
100 Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:44:19) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

#2 == "Tartaruga"
#5 == "Garça"
#10 == "Arara"
#20 == "Mico-leao-dourado"
#50 == "Onça-pintada"
#100 == "Garoupa"

if(vc == 2):
	print( "Tartaruga" )
elif(vc == 5):
	print(vc, "Garça")
elif(vc == 10):
	print (vc, "Arara")
elif(vc == 20):
	print(vc, "Mico-leao-dourado")
elif(vc == 50):	
	print("Onça-pintada")
elif(vc == 100):
	print(vc, "Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
100 Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:44:47) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

#2 == "Tartaruga"
#5 == "Garça"
#10 == "Arara"
#20 == "Mico-leao-dourado"
#50 == "Onça-pintada"
#100 == "Garoupa"

if(vc == 2):
	print( "Tartaruga" )
elif(vc == 5):
	print(vc, "Garca")
elif(vc == 10):
	print (vc, "Arara")
elif(vc == 20):
	print(vc, "Mico-leao-dourado")
elif(vc == 50):	
	print("Onça-pintada")
elif(vc == 100):
	print(vc, "Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
100 Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:45:36) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

#2 == "Tartaruga"
#5 == "Garça"
#10 == "Arara"
#20 == "Mico-leao-dourado"
#50 == "Onça-pintada"
#100 == "Garoupa"

if(vc == 2):
	print( "Tartaruga" )
elif(vc == 5):
	print(vc, "Garca")
elif(vc == 10):
	print (vc, "Arara")
elif(vc == 20):
	print(vc, "Mico-leao-dourado")
elif(vc == 50):	
	print("Onca-pintada")
elif(vc == 100):
	print(vc, "Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
100 Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:45:50) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

#2 == "Tartaruga"
#5 == "Garça"
#10 == "Arara"
#20 == "Mico-leao-dourado"
#50 == "Onça-pintada"
#100 == "Garoupa"

if(vc == 2):
	print( "Tartaruga" )
elif(vc == 5):
	print(vc, "Garca")
elif(vc == 10):
	print (vc, "Arara")
elif(vc == 20):
	print(vc, "Mico-leao-dourado")
elif(vc == 50):	
	print("Onca-pintada")
elif(vc == 100):
	print(vc, "Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
100 Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:45:56) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

#2 == "Tartaruga"
#5 == "Garça"
#10 == "Arara"
#20 == "Mico-leao-dourado"
#50 == "Onça-pintada"
#100 == "Garoupa"

if(vc == 2):
	print( "Tartaruga" )
elif(vc == 5):
	print(vc, "Garca")
elif(vc == 10):
	print (vc, "Arara")
elif(vc == 20):
	print(vc, "Mico-leao-dourado")
elif(vc == 50):	
	print("Onca-pintada")
elif(vc == 100):
	print(vc, "Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
100 Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:46:13) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

#2 == "Tartaruga"
#5 == "Garça"
#10 == "Arara"
#20 == "Mico-leao-dourado"
#50 == "Onça-pintada"
#100 == "Garoupa"

if(vc == 2):
	print( "Tartaruga" )
elif(vc == 5):
	print(vc, "Garca")
elif(vc == 10):
	print (vc, "Arara")
elif(vc == 20):
	print(vc, "Mico-leao-dourado")
elif(vc == 50):	
	print("Onca-pintada")
elif(vc == 100):
	print(vc, "Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
100 Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:46:55) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

#2 == "Tartaruga"
#5 == "Garça"
#10 == "Arara"
#20 == "Mico-leao-dourado"
#50 == "Onça-pintada"
#100 == "Garoupa"

if(vc == 2):
	print("Tartaruga" )
elif(vc == 5):
	print("Garca")
elif(vc == 10):
	print ("Arara")
elif(vc == 20):
	print("Mico-leao-dourado")
elif(vc == 50):	
	print("Onca-pintada")
elif(vc == 100):
	print("Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:47:17) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

#2 == "Tartaruga"
#5 == "Garça"
#10 == "Arara"
#20 == "Mico-leao-dourado"
#50 == "Onça-pintada"
#100 == "Garoupa"

print (vc)
if(vc == 2):
	print("Tartaruga" )
elif(vc == 5):
	print("Garca")
elif(vc == 10):
	print ("Arara")
elif(vc == 20):
	print("Mico-leao-dourado")
elif(vc == 50):	
	print("Onca-pintada")
elif(vc == 100):
	print("Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:48:31) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

#2 == "Tartaruga"
#5 == "Garça"
#10 == "Arara"
#20 == "Mico-leao-dourado"
#50 == "Onça-pintada"
#100 == "Garoupa"

print ("Entrada: " , vc)
if(vc == 2):
	print("Animal: Tartaruga" )
elif(vc == 5):
	print("Animal: Garca")
elif(vc == 10):
	print ("Animal: Arara")
elif(vc == 20):
	print("Animal: Mico-leao-dourado")
elif(vc == 50):	
	print("Animal: Onca-pintada")
elif(vc == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:48:48) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

#2 == "Tartaruga"
#5 == "Garça"
#10 == "Arara"
#20 == "Mico-leao-dourado"
#50 == "Onça-pintada"
#100 == "Garoupa"

print ("Entrada: " , vc)
if(vc == 2):
	print("Animal: Tartaruga" )
elif(vc == 5):
	print("Animal: Garca")
elif(vc == 10):
	print ("Animal: Arara")
elif(vc == 20):
	print("Animal: Mico-leao-dourado")
elif(vc == 50):	
	print("Animal: Onca-pintada")
elif(vc == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 11:48:54) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

#2 == "Tartaruga"
#5 == "Garça"
#10 == "Arara"
#20 == "Mico-leao-dourado"
#50 == "Onça-pintada"
#100 == "Garoupa"

print ("Entrada: " , vc)
if(vc == 2):
	print("Animal: Tartaruga" )
elif(vc == 5):
	print("Animal: Garca")
elif(vc == 10):
	print ("Animal: Arara")
elif(vc == 20):
	print("Animal: Mico-leao-dourado")
elif(vc == 50):	
	print("Animal: Onca-pintada")
elif(vc == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 11:48:57) 
-- CODE:

vc = int(input("Digite o valor da cedula: "))

#2 == "Tartaruga"
#5 == "Garça"
#10 == "Arara"
#20 == "Mico-leao-dourado"
#50 == "Onça-pintada"
#100 == "Garoupa"

print ("Entrada: " , vc)
if(vc == 2):
	print("Animal: Tartaruga" )
elif(vc == 5):
	print("Animal: Garca")
elif(vc == 10):
	print ("Animal: Arara")
elif(vc == 20):
	print("Animal: Mico-leao-dourado")
elif(vc == 50):	
	print("Animal: Onca-pintada")
elif(vc == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.180055
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
